--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <div>
-	<todo-navbar></todo-navbar>
+	<standard-navbar ng-hide="standard-navbar.logout"></standard-navbar>
 	<h1>Hi, {{username}}</h1>
 	<h1>{{title}}</h1>
 </div>
