--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,6 @@
+<standard-navbar></standard-navbar>
 <div>
+<div><h4>Please enter your details to login</h4></div>
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
