--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,6 @@
+<standard-navbar></standard-navbar>
 <div>
+    <div><h4>Please enter your details to register, or select login from the menu if you already have an account</h4></div>
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
