--- a/templates/todo.html
+++ b/templates/todo.html
@@ -1,4 +1,4 @@
-<todo-navbar></todo-navbar>
+<standard-navbar></standard-navbar>
 <div class="container">
     <todo-table></todo-table>
     <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#todo-modal">Create New Todo Item</button>
