added register and login messages

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,4 +1,6 @@
+<todo-navbar></todo-navbar>
 <div>
+    <div><h3>Please enter your details to register, or click Login above if you already have an account</h3></div>
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
