--- a/templates/login.html
+++ b/templates/login.html
@@ -1,4 +1,6 @@
+<todo-navbar></todo-navbar>
 <div>
+    <div><h3>Please enter your login details, or click above to Register</h3></div>
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
