added functionality to close form on Submit

--- a/templates/todo.html
+++ b/templates/todo.html
@@ -1,5 +1,6 @@
 <todo-navbar></todo-navbar>
 <div class="container">
+    <div><h3>Please enter your details to register</h3></div>
     <todo-table></todo-table>
     <button type="button" class="btn btn-primary btn-large" data-toggle="modal" data-target="#todo-modal">Create New Todo Item</button>
  
@@ -32,7 +33,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary">Create</button>
+                            <button id="submit" type="submit" class="btn btn-primary">Create</button>
                         </div>
                     </form>
                 </div>
